# strata

./: .dockerignore  .gitignore  README.md  docker-compose.yml  restart_project.ps1
backend/: Dockerfile  build_log.txt  debug_news.json  debug_news.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  api.py
backend/app/api/v1/endpoints/: __init__.py  backtest.py  market.py  news.py  options.py  portfolio.py  simulation.py  statarb.py  stream.py  system.py
backend/app/core/: __init__.py  config.py  db.py
backend/app/engine/: __init__.py  monte_carlo_engine.pyd.old
backend/app/models/: __init__.py  market_data.py  portfolio.py  statarb.py
backend/app/schemas/: __init__.py  backtest.py  market.py  options.py  portfolio.py  simulation.py  statarb.py
backend/app/services/: __init__.py  backtest_service.py  cointegration.py  data_providers.py  hrp_service.py  ingestion.py  news_service.py  options_service.py  simulation_service.py  websocket_manager.py
backend/core/: CMakeLists.txt
backend/core/bindings/: bindings.cpp
backend/core/include/: greeks_engine.h  monte_carlo.h
backend/core/src/: greeks_engine.cpp  monte_carlo.cpp
backend/docs/: TESTING_MONTE_CARLO.md
backend/scripts/: build_extension.py  seed_demo_portfolio.py  seed_market_data.py  verify_project.py
data/: .gitkeep
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CommandPalette.tsx  CompanySearch.tsx  Logo.tsx  MultiTickerSelect.tsx  NotificationCenter.tsx  TickerSearch.tsx  mode-toggle.tsx  theme-provider.tsx
frontend/src/components/charts/: CandleChart.tsx  EquityCurve.tsx  IVSurfaceChart.tsx  LivePriceChart.tsx  MonteCarloChart.tsx  index.ts
frontend/src/components/layout/: DashboardLayout.tsx  Sidebar.tsx  index.ts
frontend/src/context/: PortfolioContext.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts  index.ts  queryClient.ts  utils.ts
frontend/src/pages/: BacktestPage.tsx  Dashboard.tsx  DataManager.tsx  MarketDataPage.tsx  MonteCarlo.tsx  NewsPage.tsx  OptionsAnalysis.tsx  PortfolioDashboard.tsx  PortfolioOptimization.tsx  SettingsPage.tsx  StatArbPage.tsx  index.ts
frontend/src/services/: index.ts  market.ts  options.ts  simulation.ts  statarb.ts
frontend/src/utils/: helpers.ts
scripts/: .gitkeep
